cards-flex-wrap-fix

--- a/css/_games.scss
+++ b/css/_games.scss
@@ -9,18 +9,19 @@
   color: #fff;
   padding: 60px 30px;
   width: 100%;
+  height: 100%;
 
-  &__container {
-    min-height: 360px;
+  &__padding-container {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
   }
 
-  &__row {
+  &__container {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
   }
 
   img {
@@ -52,21 +53,43 @@
   transition: transform 250ms ease-out;
 
   &__rank {
+    transform-origin: 0 100%;
+    @include hideTapHighlightColor();
+    @include hardwareAccel();
+    @include improveAntiAlias();
+
     position: absolute;
-    top: 0;
-    right: 1em;
+    top: 10px;
+    right: 10px;
     z-index: 5;
     font-weight: 700;
     font-size: 1.125em;
     background-color: rgba(0, 0, 0, 0.65);
-    clip-path: polygon(100% 0, 100% 100%, 51% 80%, 0 100%, 0 0);
     transition: var(--transition);
     cursor: pointer;
     color: #fff;
+    border-radius: 30%;
+    background-image: linear-gradient(130deg, #d8984e, #d84e4e);
+    box-shadow: 0px 0px 16px 5px #d84e4e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover,
+    &:focus {
+      animation-name: wobble-top;
+      animation-duration: 1s;
+      animation-timing-function: ease-out;
+      animation-iteration-count: 1;
+      transition: all 350ms ease-out;
+
+      background-image: linear-gradient(130deg, #1cffb7, #0075ff);
+      box-shadow: 0px 0px 16px 5px #1cffb7;
+    }
 
     i {
-      padding: 20px 20px 30px 20px;
-      font-size: 24px;
+      padding: 22px;
+      font-size: 26px;
     }
   }
 
@@ -91,7 +114,13 @@
 //////////////////////////////////
 
 .game__rank._active {
-  transform: translate(-97%, -108%);
+  top: -33px;
+  right: -28px;
+
+  i {
+    padding: 15px;
+    font-size: 20px;
+  }
 }
 
 .game__rank._active + .front {
@@ -112,6 +141,7 @@
   opacity: 1;
   transition: transform 250ms ease-in-out, opacity 150ms linear;
   transform: translateY(20px);
+  display: flex;
 }
 
 .game__rank._active + .front + .back > .back__streamers {
@@ -221,7 +251,7 @@
   left: 0;
   right: 0;
   z-index: 1;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 
@@ -492,6 +522,11 @@
       padding: 10px 15px;
       margin: 5px 0;
     }
+  }
+
+  .game__rank._active {
+    top: -33px;
+    right: -5px;
   }
 
   .game__rank._active + .front + .back + .game__background {
