--- a/css/_home.scss
+++ b/css/_home.scss
@@ -147,7 +147,6 @@ $shadow: #e75c5c;
         background: #f1f1f1;
         margin: 10px;
         border-radius: 30%;
-        box-shadow: 0 5px 15px -5px #00000070;
         overflow: hidden;
         position: relative;
         transition: all 350ms ease-out;
