--- a/css/main.css
+++ b/css/main.css
@@ -562,8 +562,6 @@ canvas {
   background: #f1f1f1;
   margin: 10px;
   border-radius: 30%;
-  -webkit-box-shadow: 0 5px 15px -5px #00000070;
-          box-shadow: 0 5px 15px -5px #00000070;
   overflow: hidden;
   position: relative;
   -webkit-transition: all 350ms ease-out;
@@ -1271,18 +1269,19 @@ canvas {
   -webkit-box-shadow: 5px 10px 5px #5d8ab1;
           box-shadow: 5px 10px 5px #5d8ab1;
   margin: auto;
-  padding-bottom: 26px;
 }
 
 .tabs__container {
-  overflow: auto;
-  height: 100%;
+  height: calc(100% - 88.18px);
+  margin: auto;
 }
 
 .tabs__body {
   position: relative;
-  height: calc(100% - 60px);
-  padding: 30px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  min-height: 360px;
 }
 
 .tabs .body__section {
@@ -1343,27 +1342,24 @@ canvas {
   color: #fff;
   padding: 60px 30px;
   width: 100%;
+  height: 100%;
+}
+
+.games__padding-container {
+  width: 100%;
+  height: 100%;
 }
 
 .games__container {
-  min-height: 360px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.games__row {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 30px;
 }
 
 .games img {
@@ -1401,24 +1397,58 @@ canvas {
 }
 
 .game__rank {
+  -webkit-transform-origin: 0 100%;
+          transform-origin: 0 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: absolute;
-  top: 0;
-  right: 1em;
+  top: 10px;
+  right: 10px;
   z-index: 5;
   font-weight: 700;
   font-size: 1.125em;
   background-color: rgba(0, 0, 0, 0.65);
-  -webkit-clip-path: polygon(100% 0, 100% 100%, 51% 80%, 0 100%, 0 0);
-          clip-path: polygon(100% 0, 100% 100%, 51% 80%, 0 100%, 0 0);
   -webkit-transition: var(--transition);
   transition: var(--transition);
   cursor: pointer;
   color: #fff;
+  border-radius: 30%;
+  background-image: linear-gradient(130deg, #d8984e, #d84e4e);
+  -webkit-box-shadow: 0px 0px 16px 5px #d84e4e;
+          box-shadow: 0px 0px 16px 5px #d84e4e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.game__rank:hover, .game__rank:focus {
+  -webkit-animation-name: wobble-top;
+          animation-name: wobble-top;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-transition: all 350ms ease-out;
+  transition: all 350ms ease-out;
+  background-image: linear-gradient(130deg, #1cffb7, #0075ff);
+  -webkit-box-shadow: 0px 0px 16px 5px #1cffb7;
+          box-shadow: 0px 0px 16px 5px #1cffb7;
 }
 
 .game__rank i {
-  padding: 20px 20px 30px 20px;
-  font-size: 24px;
+  padding: 22px;
+  font-size: 26px;
 }
 
 .game__background {
@@ -1441,8 +1471,13 @@ canvas {
 }
 
 .game__rank._active {
-  -webkit-transform: translate(-97%, -108%);
-          transform: translate(-97%, -108%);
+  top: -33px;
+  right: -28px;
+}
+
+.game__rank._active i {
+  padding: 15px;
+  font-size: 20px;
 }
 
 .game__rank._active + .front {
@@ -1469,6 +1504,9 @@ canvas {
   transition: transform 250ms ease-in-out, opacity 150ms linear, -webkit-transform 250ms ease-in-out;
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .game__rank._active + .front + .back > .back__streamers {
@@ -1595,9 +1633,7 @@ canvas {
   left: 0;
   right: 0;
   z-index: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1958,6 +1994,10 @@ canvas {
     font-size: 12px;
     padding: 10px 15px;
     margin: 5px 0;
+  }
+  .game__rank._active {
+    top: -33px;
+    right: -5px;
   }
   .game__rank._active + .front + .back + .game__background {
     -webkit-transform: scale(1.1, 1.2);
